--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1136,5 +1136,54 @@
     "Zip \/ Postal Code": "Zip \/ Postal Code",
     "ZIP \/ Postal Code": "ZIP \/ Postal Code",
     "Åland Islands": "Åland Islands",
-    "Info User": "Info User"
+    "Info User": "Info User",
+    "views": "views",
+    "posts": "posts",
+    "follows": "follows",
+    "Total Views": "Total Views",
+    "Total Posts": "Total Posts",
+    "Posts": "Posts",
+    "Total Follows": "Total Follows",
+    "Create Post": "Create Post",
+    "Show": "Show",
+    "Followers": "Followers",
+    "Had Followed": "Had Followed",
+    "Unfollow": "Unfollow",
+    "New Posts": "New Posts",
+    "Authenticated Posts": "Authenticated Posts",
+    "High Interactions Posts": "High Interactions Posts",
+    "Search for posts/user/hashtag": "Search for posts/user/hashtag",
+    "Top featured keywords": "Top featured keywords",
+    "Hashtag": "Hashtag",
+    "Title": "Title",
+    "title": "title",
+    "Content": "Content",
+    "Back": "Back",
+    "Press Back Until Empty Input To Remove Box Tag Or Click Outside The Search Block": "Press Back Until Empty Input To Remove Box Tag Or Click Outside The Search Block",
+    "Total Reports": "Total Reports",
+    "Pick noe": "Pick one",
+    "Category": "Category",
+    "category": "category",
+    "Report": "Report",
+    "Follow": "Follow",
+    "Tags": "Tags",
+    "Comments": "Comments",
+    "Posts in the same Category": "Posts in the same Category",
+    "Reason": "Reason",
+    "Offensive, harmful to others": "Offensive, harmful to others",
+    "Off topic": "Off topic",
+    "Legal violation": "Legal violation",
+    "Ethical or cultural violation": "Ethical or cultural violation",
+    "False reporting": "False reporting",
+    "Copyright infringement": "Copyright infringement",
+    "Disclosure of personal information": "Disclosure of personal information",
+    "Spam, junk": "Spam, junk",
+    "Other reasons": "Other reasons",
+    "Opinion": "Opinion",
+    "Other feedback content": "Other feedback content",
+    "Follows": "Follows",
+    "Reports": "Reports",
+    "Pending": "Pending",
+    "Publish": "Publish",
+    "Handle": "Handle"
 }
