--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1,5 +1,4 @@
 {
-    "Oh no": "Oh, không",
     "(and :count more error)": "(và :count lỗi khác)",
     "(and :count more errors)": "(và :count lỗi khác)",
     "30 Days": "30 Ngày",
@@ -972,45 +971,6 @@
     "Uganda": "Uganda",
     "Ukraine": "Ukraine",
     "Unauthorized": "Không Được Phép",
-    "United Arab Emirates": "Các Tiểu Vương Quốc Ả Rập Thống Nhất",
-    "United Kingdom": "Vương Quốc Anh",
-    "United States": "Hoa Kỳ",
-    "United States Minor Outlying Islands": "Đảo nhỏ xa xôi hẻo lánh của Hoa Kỳ",
-    "United States Outlying Islands": "Các quần đảo xa xôi của Hoa Kỳ'",
-    "Unknown": "Không Xác Định",
-    "Unpaid": "Chưa thanh toán",
-    "Update": "Cập Nhật",
-    "Update & Continue Editing": "Cập Nhật & Và Tiếp Tục Chỉnh Sửa",
-    "Update :resource": "Cập Nhật :resource",
-    "Update :resource: :title": "Cập Nhật :resource: :title",
-    "Update Announcement": "Thông báo cập nhật",
-    "Update attached :resource: :title": "Cập Nhật :resource Đã Gắn: :title",
-    "Update Billing Address": "Cập nhật địa chỉ thanh toán",
-    "Update Password": "Cập nhật mật khẩu",
-    "Update Payment Information": "Cập Nhật Thông Tin Thanh Toán",
-    "Update Payment Method": "Cập Nhật Phương Thức Thanh Toán",
-    "Update Photo": "Cập nhật ảnh",
-    "Update Subscription": "Cập nhật đăng ký",
-    "Update VAT ID": "Cập nhật mã số thuế GTGT",
-    "Update your account's profile information and email address.": "Cập nhật thông tin hồ sơ tài khoản và địa chỉ email của bạn.",
-    "Updating": "Đang cập nhật",
-    "Uploading": "Đang tải lên",
-    "Uploading files... (:current/:total)": "Đang tải tệp lên... (:current/:total)",
-    "Uruguay": "Uruguay",
-    "Use a recovery code": "Sử dụng mã khôi phục",
-    "Use an authentication code": "Sử dụng mã xác minh",
-    "User Actions": "Hành động của người dùng",
-    "Users": "người dùng",
-    "Users Currently Trialing": "Người dùng hiện đang dùng thử",
-    "Utah": "bang Utah",
-    "Uzbekistan": "Uzbekistan",
-    "Value": "Giá Trị",
-    "Vanuatu": "Vanuatu",
-    "VAT ID": "mã số thuế GTGT",
-    "VAT Number": "Mã Số VAT",
-    "Venezuela": "Venezuela",
-    "Venezuela, Bolivarian Republic of": "Venezuela, Công Hòa Bolivar",
-    "Verify": "Kiểm chứng",
     "Verify Email Address": "Xác Minh Địa Chỉ Email",
     "Verify Your Email Address": "Xác Minh Địa Chỉ Email Của Bạn",
     "Vermont": "bang Vermont",
@@ -1135,5 +1095,55 @@
     "Vietnamese": "Tiếng việt",
     "Gender": "Giới tính",
     "Birthday": "Sinh nhật",
-    "Info User": "Thông tin người dùng"
+    "Info User": "Thông tin người dùng",
+    "views": "Lượt xem",
+    "posts": "Bài viết",
+    "follows": "Người theo dõi",
+    "Total Views": "Tổng số lượt xem",
+    "Total Posts": "Tổng số bài viết",
+    "Posts": "Bài viết",
+    "Total Follows": "Tổng số người theo dõi",
+    "Create Post": "Tạo bài viết",
+    "Show": "Xem chi tiết",
+    "Followers": "Danh sách người theo dõi",
+    "Had Followed": "Danh sách người đã theo dõi",
+    "Unfollow": "Hủy theo dõi",
+    "New Posts": "Bài viết mới nhất",
+    "Authenticated Posts": "Bài viết được xác thực",
+    "High Interactions Posts": "Bài viết có lượt tương tác cao nhất",
+    "Search for posts/user/hashtag": "Tìm kiếm bài đăng/user/hashtag",
+    "Top featured keywords": "Từ khóa nổi bật hàng đầu",
+    "Hashtag": "Thẻ",
+    "Title": "Tiêu đề",
+    "title": "tiêu đề",
+    "Content": "Nội dung",
+    "Back": "Quay lại",
+    "Press Back Until Empty Input To Remove Box Tag Or Click Outside The Search Block": "Nhấn Back cho đến khi trống thanh tìm kiếm để xóa thẻ hộp hoặc bấm ngoài khối tìm kiếm",
+    "Total Reports": "Tổng số báo cáo",
+    "reports": "Báo cáo",
+    "Pick one": "Chọn một",
+    "Category": "Danh mục",
+    "category": "danh mục",
+    "Report": "Báo cáo",
+    "Follow": "Theo dõi",
+    "Tags": "Các thẻ",
+    "Comments": "Các bình luận",
+    "Posts in the same Category": "Bài viết cùng danh mục",
+    "Reason": "Lý do",
+    "Offensive, harmful to others": "Xúc phạm, gây hại người khác",
+    "Off topic": "Lạc đề",
+    "Legal violation": "Vi phạm pháp luật",
+    "Ethical or cultural violation": "Vi phạm đạo đức, thuần phong mỹ tục",
+    "False reporting": "Tố cáo sai sự thật",
+    "Copyright infringement": "Vi phạm bản quyền",
+    "Disclosure of personal information": "Để lộ thông tin cá nhân",
+    "Spam, junk": "Spam, rác",
+    "Other reasons": "Lý do khác",
+    "Opinion": "Quan điểm",
+    "Other feedback content": "Nội dung phản hồi khác",
+    "Follows": "Theo dõi",
+    "Reports": "Báo cáo",
+    "Pending": "Chưa giải quyết",
+    "Publish": "Công bố",
+    "Handle": "Xử lý"
 }
