--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1153,5 +1153,6 @@
     "Created_at": "Ngày tạo",
     "Updated_at": "Ngày sửa",
     "Users": "Người dùng",
-    "Banned": "Bị cấm"
+    "Banned": "Bị cấm",
+    "Thumbnail": "Hình nhỏ"
 }
