--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1154,5 +1154,10 @@
     "Updated_at": "Ngày sửa",
     "Users": "Người dùng",
     "Banned": "Bị cấm",
-    "Thumbnail": "Hình nhỏ"
+    "Thumbnail": "Hình nhỏ",
+    "thumbnail": "hình nhỏ",
+    "Edit Post": "Chỉnh sửa bài viết",
+    "All": "Tất cả",
+    "Hidden": "Ẩn",
+    "Description": "Mô tả"
 }
