show post by category

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1152,7 +1152,7 @@
     "Unfollow": "Unfollow",
     "New Posts": "New Posts",
     "Authenticated Posts": "Authenticated Posts",
-    "High Interactions Posts": "High Interactions Posts",
+    "High View Posts": "High View Posts",
     "Search for posts/user/hashtag": "Search for posts/user/hashtag",
     "Top featured keywords": "Top featured keywords",
     "Hashtag": "Hashtag",
