--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1111,7 +1111,7 @@
     "Unfollow": "Hủy theo dõi",
     "New Posts": "Bài viết mới nhất",
     "Authenticated Posts": "Bài viết được xác thực",
-    "High Interactions Posts": "Bài viết có lượt tương tác cao nhất",
+    "High View Posts": "Bài viết có xem cao nhất",
     "Search for posts/user/hashtag": "Tìm kiếm bài đăng/user/hashtag",
     "Top featured keywords": "Từ khóa nổi bật hàng đầu",
     "Hashtag": "Thẻ",
