--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1182,6 +1182,7 @@
     "Other reasons": "Other reasons",
     "Opinion": "Opinion",
     "Other feedback content": "Other feedback content",
+    "Feedback content": "Feedback content",
     "Follows": "Follows",
     "Reports": "Reports",
     "Pending": "Pending",
@@ -1200,12 +1201,13 @@
     "Hidden": "Hidden",
     "Incognito": "Incognito",
     "Please do not leave it blank": "Please do not leave it blank",
-    "Post successfully, Reload the page to see you post": "Post successfully, Reload the page to see you post",
     "Update this resource success": "Update this resource success",
     "Store this resource success": "Store this resource success",
     "Description": "Description",
     "Reject": "Reject",
     "Are you sure you want to update this resource?": "Are you sure you want to update this resource?",
     "Ban": "Ban",
-    "Enter the title you want to search for": "Enter the title you want to search for"
+    "Enter the title you want to search for": "Enter the title you want to search for",
+    "Post successfully, Reload the page to see you post": "Post successfully, Reload the page to see you post",
+    "Report successfully": "Report successfully"
 }
