--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1142,6 +1142,7 @@
     "Other reasons": "Lý do khác",
     "Opinion": "Quan điểm",
     "Other feedback content": "Nội dung phản hồi khác",
+    "Feedback content": "Nội dung phản hồi",
     "Follows": "Theo dõi",
     "Reports": "Báo cáo",
     "Pending": "Chưa giải quyết",
@@ -1167,6 +1168,7 @@
     "Ban": "Cấm",
     "Incognito": "Ẩn danh",
     "Please do not leave it blank": "Vui lòng không để trống",
+    "Report successfully": "Báo cáo thành công",
     "Post successfully, Reload the page to see you post": "Đã đăng thành công, Tải lại trang để xem",
     "Enter the title you want to search for": "Điền tiêu đề bạn cần tìm kiếm"
 }
