--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1209,5 +1209,6 @@
     "Ban": "Ban",
     "Enter the title you want to search for": "Enter the title you want to search for",
     "Post successfully, Reload the page to see you post": "Post successfully, Reload the page to see you post",
-    "Report successfully": "Report successfully"
+    "Report successfully": "Report successfully",
+    "Reviews": "Reviews"
 }
