--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1170,5 +1170,6 @@
     "Please do not leave it blank": "Vui lòng không để trống",
     "Report successfully": "Báo cáo thành công",
     "Post successfully, Reload the page to see you post": "Đã đăng thành công, Tải lại trang để xem",
-    "Enter the title you want to search for": "Điền tiêu đề bạn cần tìm kiếm"
+    "Enter the title you want to search for": "Điền tiêu đề bạn cần tìm kiếm",
+    "Reviews": "Đánh giá"
 }
