--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1208,7 +1208,15 @@
     "Are you sure you want to update this resource?": "Are you sure you want to update this resource?",
     "Ban": "Ban",
     "Enter the title you want to search for": "Enter the title you want to search for",
+    "Enter the name you want to search for": "Enter the name you want to search for",
     "Post successfully, Reload the page to see you post": "Post successfully, Reload the page to see you post",
     "Report successfully": "Report successfully",
-    "Reviews": "Reviews"
+    "Reviews": "Reviews",
+    "Moderators": "Moderators",
+    "Admins": "Admins",
+    "Verified": "Verified",
+    "Not Verify Yet": "Not Verify Yet",
+    "Unban": "Unban",
+    "Set Moderator": "Set Moderator",
+    "Unset Moderator": "Unset Moderator"
 }
