optimize Handle Post && verify post

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1218,5 +1218,7 @@
     "Not Verify Yet": "Not Verify Yet",
     "Unban": "Unban",
     "Set Moderator": "Set Moderator",
-    "Unset Moderator": "Unset Moderator"
+    "Unset Moderator": "Unset Moderator",
+    "Unverified": "Unverified",
+    "This post had been verified": "This post had been verified"
 }
