--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1180,5 +1180,7 @@
     "Not Verify Yet": "Chưa xác thực",
     "Unban": "Bỏ cấm",
     "Set Moderator": "Thiết lập người điều hành",
-    "Unset Moderator": "Bỏ đặt người điều hành"
+    "Unset Moderator": "Bỏ đặt người điều hành",
+    "Unverified": "Hủy xác minh",
+    "This post had been verified": "Bài đăng này đã được xác minh"
 }
