fix handle Report

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1220,5 +1220,6 @@
     "Set Moderator": "Set Moderator",
     "Unset Moderator": "Unset Moderator",
     "Unverified": "Unverified",
-    "This post had been verified": "This post had been verified"
+    "This post had been verified": "This post had been verified",
+    "Enter the id you want to search for": "Enter the id you want to search for"
 }
