--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1182,5 +1182,6 @@
     "Set Moderator": "Thiết lập người điều hành",
     "Unset Moderator": "Bỏ đặt người điều hành",
     "Unverified": "Hủy xác minh",
-    "This post had been verified": "Bài đăng này đã được xác minh"
+    "This post had been verified": "Bài đăng này đã được xác minh",
+    "Enter the id you want to search for": "Nhập id bạn muốn tìm kiếm"
 }
