add search index

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1222,5 +1222,12 @@
     "Unverified": "Unverified",
     "This post had been verified": "This post had been verified",
     "Enter the id you want to search for": "Enter the id you want to search for",
-    "The tag already exists in the list.": "The tag already exists in the list."
+    "The tag already exists in the list.": "The tag already exists in the list.",
+    "Show more": "Show more",
+    "By": "By",
+    "List": "List",
+    "match": "match",
+    "with": "with",
+    "users": "người dùng",
+    "hashtag": "thẻ"
 }
