--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1096,10 +1096,11 @@
     "Gender": "Giới tính",
     "Birthday": "Sinh nhật",
     "Info User": "Thông tin người dùng",
-    "views": "Lượt xem",
+    "views": "lượt xem",
     "Views": "Lượt xem",
-    "posts": "Bài viết",
-    "follows": "Người theo dõi",
+    "posts": "bài viết",
+    "Follows": "Người theo dõi",
+    "follows": "người theo dõi",
     "Total Views": "Tổng số lượt xem",
     "Total Posts": "Tổng số bài viết",
     "Posts": "Bài viết",
@@ -1112,7 +1113,7 @@
     "New Posts": "Bài viết mới nhất",
     "Authenticated Posts": "Bài viết được xác thực",
     "High View Posts": "Bài viết có xem cao nhất",
-    "Search for posts/user/hashtag": "Tìm kiếm bài đăng/user/hashtag",
+    "Search for posts/user/hashtag": "Tìm kiếm bài đăng/người dùng/thẻ",
     "Top featured keywords": "Từ khóa nổi bật hàng đầu",
     "Hashtag": "Thẻ",
     "Title": "Tiêu đề",
@@ -1121,7 +1122,7 @@
     "Back": "Quay lại",
     "Press Back Until Empty Input To Remove Box Tag Or Click Outside The Search Block": "Nhấn Back cho đến khi trống thanh tìm kiếm để xóa thẻ hộp hoặc bấm ngoài khối tìm kiếm",
     "Total Reports": "Tổng số báo cáo",
-    "reports": "Báo cáo",
+    "reports": "báo cáo",
     "Pick one": "Chọn một",
     "Category": "Danh mục",
     "category": "danh mục",
@@ -1143,7 +1144,6 @@
     "Opinion": "Quan điểm",
     "Other feedback content": "Nội dung phản hồi khác",
     "Feedback content": "Nội dung phản hồi",
-    "Follows": "Theo dõi",
     "Reports": "Báo cáo",
     "Pending": "Chưa giải quyết",
     "Publish": "Công bố",
@@ -1184,5 +1184,12 @@
     "Unverified": "Hủy xác minh",
     "This post had been verified": "Bài đăng này đã được xác minh",
     "Enter the id you want to search for": "Nhập id bạn muốn tìm kiếm",
-    "The tag already exists in the list.": "Thẻ đã tồn tại trong danh sách."
+    "The tag already exists in the list.": "Thẻ đã tồn tại trong danh sách.",
+    "Show more": "Xem thêm",
+    "By": "Bởi",
+    "List": "Danh sách",
+    "match": "khớp",
+    "with": "với",
+    "users": "người dùng",
+    "hashtag": "thẻ"
 }
