--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1228,6 +1228,6 @@
     "List": "List",
     "match": "match",
     "with": "with",
-    "users": "người dùng",
-    "hashtag": "thẻ"
+    "users": "users",
+    "hashtag": "hashtag"
 }
