--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1152,7 +1152,7 @@
     "Had Followed": "Had Followed",
     "Unfollow": "Unfollow",
     "New Posts": "New Posts",
-    "Authenticated Posts": "Authenticated Posts",
+    "Verified Posts": "Verified Posts",
     "High View Posts": "High View Posts",
     "Search for posts/user/hashtag": "Search for posts/user/hashtag",
     "Top featured keywords": "Top featured keywords",
@@ -1225,6 +1225,7 @@
     "Enter the id you want to search for": "Enter the id you want to search for",
     "The tag already exists in the list.": "The tag already exists in the list.",
     "Show more": "Show more",
+    "Show all": "Show all",
     "By": "By",
     "List": "List",
     "match": "match",
