--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1112,7 +1112,7 @@
     "Had Followed": "Danh sách người đã theo dõi",
     "Unfollow": "Hủy theo dõi",
     "New Posts": "Bài viết mới nhất",
-    "Authenticated Posts": "Bài viết được xác thực",
+    "Verified Posts": "Bài viết được xác thực",
     "High View Posts": "Bài viết có xem cao nhất",
     "Search for posts/user/hashtag": "Tìm kiếm bài đăng/người dùng/thẻ",
     "Top featured keywords": "Từ khóa nổi bật hàng đầu",
@@ -1187,6 +1187,7 @@
     "Enter the id you want to search for": "Nhập id bạn muốn tìm kiếm",
     "The tag already exists in the list.": "Thẻ đã tồn tại trong danh sách.",
     "Show more": "Xem thêm",
+    "Show all": "Xem tất cả",
     "By": "Bởi",
     "List": "Danh sách",
     "match": "khớp",
