--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1207,5 +1207,7 @@
     "most comments": "nhiều lượt bình luận nhất",
     "New Post": "Bài viết mới nhất",
     "Post": "Bài viết",
-    "Views vary from day to day": "Lượt xem thay đổi theo từng ngày"
+    "Views vary from day to day": "Lượt xem thay đổi theo từng ngày",
+    "followed you": "đã theo dõi bạn",
+    "Last updated": "Cập nhật mới nhất"
 }
