fix bug after test && refactor repository

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1210,7 +1210,7 @@
     "Ban": "Ban",
     "Enter the title you want to search for": "Enter the title you want to search for",
     "Enter the name you want to search for": "Enter the name you want to search for",
-    "Post successfully, Reload the page to see you post": "Post successfully, Reload the page to see you post",
+    "Post successfully": "Post successfully",
     "Report successfully": "Report successfully",
     "Reviews": "Reviews",
     "Moderators": "Moderators",
