--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1170,7 +1170,7 @@
     "Incognito": "Ẩn danh",
     "Please do not leave it blank": "Vui lòng không để trống",
     "Report successfully": "Báo cáo thành công",
-    "Post successfully, Reload the page to see you post": "Đã đăng thành công, Tải lại trang để xem",
+    "Post successfully": "Đã đăng thành công",
     "Enter the title you want to search for": "Điền tiêu đề bạn cần tìm kiếm",
     "Enter the name you want to search for": "Điền tên bạn cần tìm kiếm",
     "Reviews": "Đánh giá",
