update middleware check status user && feature dashboard test

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1247,5 +1247,6 @@
     "New Post": "New Post",
     "Post": "Post",
     "Views vary from day to day": "Views vary from day to day",
-    "Last updated": "Last updated"
+    "Last updated": "Last updated",
+    "Account is banned" : "Account is banned"
 }
