--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1209,5 +1209,6 @@
     "Post": "Bài viết",
     "Views vary from day to day": "Lượt xem thay đổi theo từng ngày",
     "followed you": "đã theo dõi bạn",
-    "Last updated": "Cập nhật mới nhất"
+    "Last updated": "Cập nhật mới nhất",
+    "Account is banned" : "Tài khoản đã bị khóa"
 }
